--- a/WCNSS_qcom_cfg.ini
+++ b/WCNSS_qcom_cfg.ini
@@ -62,13 +62,10 @@ gNthBeaconFilter=50
 McastBcastFilter=3
 
 # Flag to enable Active mode offload
-gEnableActiveModeOffload=1
+gEnableActiveModeOffload=0
 
 # Flag to enable HostARPOffload feature or not
-hostArpOffload=1
-
-# Flag to enable Host IPv6 NS Offload feature or not
-hostNSOffload=1
+hostArpOffload=0
 
 #SoftAP Related Parameters
 # AP MAc addr (obsolete)
@@ -211,8 +208,8 @@ gEnableDFSChnlScan=1
 # Enable logp/SSR
 gEnableLogp=1
 
-# Enable HT40
-gChannelBondingMode5GHz=1
+# Disable HT40
+gChannelBondingMode5GHz=0
 
 # Enable Automatic Tx Power control
 gEnableAutomaticTxPowerControl=1
@@ -226,25 +223,9 @@ gIgnore_Chan165=1
 btcStaticLenLeBt=120000
 btcStaticLenLeWlan=30000
 
-#Data Inactivity Timeout when in powersave (in ms)
-gDataInactivityTimeout=200
-
 gCountryCodePriority=1
 
 gNumChanCombinedConc=255
-
-# TDLS configuration
-gEnableTDLSSupport=1
-gEnableTDLSImplicitTrigger=0
-gTDLSTxStatsPeriod=5000
-gTDLSTxPacketThreshold=100
-gTDLSDiscoveryPeriod=20000
-gTDLSMaxDiscoveryAttempt=5
-gTDLSIdleTimeout=5000
-gTDLSRssiHysteresis=100
-gTDLSRSSITriggerThreshold=-75
-gTDLSIdlePacketThreshold=5
-gTDLSRSSITeardownThreshold=-75
 
 END
 # Note: Configuration parser would not read anything past the END marker
