Modify access rules

--- a/project.config
+++ b/project.config
@@ -2,3 +2,7 @@
 	inheritFrom = All-Projects
 [project]
 	state = active
+[access "refs/heads/*"]
+	label-Code-Review = -2..+2 group LG Flo (Nexus 7 2013 WiFi) Maintainers
+	label-Verified = -1..+1 group LG Flo (Nexus 7 2013 WiFi) Maintainers
+	submit = group LG Flo (Nexus 7 2013 WiFi) Maintainers
