--- a/project.config
+++ b/project.config
@@ -3,6 +3,6 @@
 [project]
 	state = active
 [access "refs/heads/*"]
-	label-Code-Review = -2..+2 group LG Flo (Nexus 7 2013 WiFi) Maintainers
-	label-Verified = -1..+1 group LG Flo (Nexus 7 2013 WiFi) Maintainers
-	submit = group LG Flo (Nexus 7 2013 WiFi) Maintainers
+	label-Code-Review = -2..+2 group Asus Flo (Nexus 7 2013 WiFi) Maintainers
+	label-Verified = -1..+1 group Asus Flo (Nexus 7 2013 WiFi) Maintainers
+	submit = group Asus Flo (Nexus 7 2013 WiFi) Maintainers
