Modify access rules

--- a/project.config
+++ b/project.config
@@ -1,8 +1,8 @@
 [access]
 	inheritFrom = All-Projects
 [project]
-	state = active
 [access "refs/heads/*"]
 	label-Code-Review = -2..+2 group Asus Flo (Nexus 7 2013 WiFi) Maintainers
 	label-Verified = -1..+1 group Asus Flo (Nexus 7 2013 WiFi) Maintainers
 	submit = group Asus Flo (Nexus 7 2013 WiFi) Maintainers
+	create = group Asus Flo (Nexus 7 2013 WiFi) Maintainers
