init: switch to bfq iosched on sys.boot_completed

--- a/init.flo.rc
+++ b/init.flo.rc
@@ -236,6 +236,9 @@ on post-fs-data
     write /sys/devices/system/cpu/cpu3/online 1
     write /dev/cpuctl/apps/cpu.notify_on_migrate 1
 
+on property:sys.boot_completed=1
+    setprop sys.io.scheduler bfq
+
 on charger
     # Enable Power modes and set the CPU Freq Sampling rates
     write /sys/module/rpm_resources/enable_low_power/L2_cache 1
