Modify access rules

--- a/project.config
+++ b/project.config
@@ -2,7 +2,5 @@
 	inheritFrom = All-Projects
 [project]
 [access "refs/heads/*"]
-	label-Code-Review = -2..+2 group Asus Flo (Nexus 7 2013 WiFi) Maintainers
-	label-Verified = -1..+1 group Asus Flo (Nexus 7 2013 WiFi) Maintainers
-	submit = group Asus Flo (Nexus 7 2013 WiFi) Maintainers
-	create = group Asus Flo (Nexus 7 2013 WiFi) Maintainers
+	push = +force group Asus flo maintainers
+	pushMerge = group Asus flo maintainers
