Modify access rules

--- a/project.config
+++ b/project.config
@@ -4,3 +4,7 @@
 [access "refs/heads/*"]
 	push = +force group Asus flo maintainers
 	pushMerge = group Asus flo maintainers
+	delete = group Asus flo maintainers
+	label-Code-Review = -2..+2 group Asus flo maintainers
+	label-Verified = -1..+1 group Asus flo maintainers
+	submit = group Asus flo maintainers
