--- a/project.config
+++ b/project.config
@@ -8,3 +8,5 @@
 	label-Code-Review = -2..+2 group Asus flo maintainers
 	label-Verified = -1..+1 group Asus flo maintainers
 	submit = group Asus flo maintainers
+[access "refs/for/refs/heads/*"]
+	pushMerge = group Asus flo maintainers
